--- a/acm/template/placementRule.yaml
+++ b/acm/template/placementRule.yaml
@@ -2,7 +2,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
   name: test-app-placement-1
-  namespace: jace-test
+  namespace: acm-template
   labels:
     app: test-app
 spec:
