update yaml for demo env

--- a/acm/acm-demo/ns.yaml
+++ b/acm/acm-demo/ns.yaml
@@ -3,3 +3,117 @@ kind: Namespace
 metadata:
   name: acm-demo
 
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user1
+
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user2
+
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user3
+
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user4
+
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user5
+
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user6
+
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user7
+
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user8
+
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user9
+
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user10
+
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user11
+
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user12
+
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user13
+
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user14
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user15
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user16
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user17
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user18
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user19
+
+---
+apiVersion: v1 
+kind: Namespace
+metadata:
+  name: user20
